--- a/05.Front End Libraries/01.Boostrap/04.Create a Bootstrap Button.html
+++ b/05.Front End Libraries/01.Boostrap/04.Create a Bootstrap Button.html
@@ -26,13 +26,16 @@
         width: 100px;
     }
 </style>
-<div class='container-fluid'>
-    <h2 class="red-text">CatPhotoApp</h2>
+
+<div class="container-fluid">
+    <h2 class="red-text text-center">CatPhotoApp</h2>
 
     <p>Click here for <a href="#">cat photos</a>.</p>
 
     <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
+    <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera.">
+    <button class='btn btn-default'>Like</button>
     <p>Things cats love:</p>
     <ul>
         <li>cat nip</li>
