--- a/05.Front End Libraries/01.Bootstrap/03.Center Text with Bootstrap.html
+++ b/05.Front End Libraries/01.Bootstrap/03.Center Text with Bootstrap.html
@@ -35,7 +35,7 @@
 
     <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
-    <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera.">
+    <img src="https://bit.ly/fcc-running-cats" class="img-fluid" alt="Three kittens running towards the camera.">
     <p>Things cats love:</p>
     <ul>
         <li>cat nip</li>
