--- a/05.Front End Libraries/01.Bootstrap/05.Create a Block Element Bootstrap Button.html
+++ b/05.Front End Libraries/01.Bootstrap/05.Create a Block Element Bootstrap Button.html
@@ -36,8 +36,8 @@
 
     <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
-    <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera.">
-    <button class="btn btn-default btn-block">Like</button>
+    <img src="https://bit.ly/fcc-running-cats" class="img-fluid" alt="Three kittens running towards the camera.">
+    <button class="btn btn-outline-secondary btn-block">Like</button>
     <p>Things cats love:</p>
     <ul>
         <li>cat nip</li>
