--- a/05.Front End Libraries/01.Bootstrap/10.Ditch Custom CSS for Bootstrap.html
+++ b/05.Front End Libraries/01.Bootstrap/10.Ditch Custom CSS for Bootstrap.html
@@ -20,17 +20,17 @@
 <div class="container-fluid">
     <h2 class="text-primary text-center">CatPhotoApp</h2>
 
-    <a href="#"><img class="img-responsive thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+    <a href="#"><img class="img-fluid thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
-    <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera.">
+    <img src="https://bit.ly/fcc-running-cats" class="img-fluid" alt="Three kittens running towards the camera.">
     <div class="row">
-        <div class="col-xs-4">
+        <div class="col-4">
             <button class="btn btn-block btn-primary">Like</button>
         </div>
-        <div class="col-xs-4">
+        <div class="col-4">
             <button class="btn btn-block btn-info">Info</button>
         </div>
-        <div class="col-xs-4">
+        <div class="col-4">
             <button class="btn btn-block btn-danger">Delete</button>
         </div>
     </div>
