--- a/05.Front End Libraries/01.Bootstrap/13.Add Font Awesome Icons to our Buttons.html
+++ b/05.Front End Libraries/01.Bootstrap/13.Add Font Awesome Icons to our Buttons.html
@@ -20,22 +20,22 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-8">
+        <div class="col-8">
             <h2 class="text-primary text-center">CatPhotoApp</h2>
         </div>
-        <div class="col-xs-4">
-            <a href="#"><img class="img-responsive thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+        <div class="col-4">
+            <a href="#"><img class="img-fluid thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
         </div>
     </div>
-    <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera.">
+    <img src="https://bit.ly/fcc-running-cats" class="img-fluid" alt="Three kittens running towards the camera.">
     <div class="row">
-        <div class="col-xs-4">
+        <div class="col-4">
             <button class="btn btn-block btn-primary"><i class="fas fa-thumbs-up"></i> Like</button>
         </div>
-        <div class="col-xs-4">
+        <div class="col-4">
             <button class="btn btn-block btn-info">Info</button>
         </div>
-        <div class="col-xs-4">
+        <div class="col-4">
             <button class="btn btn-block btn-danger">Delete</button>
         </div>
     </div>
