--- a/05.Front End Libraries/01.Bootstrap/18.Line up Form Elements Responsively with Bootstrap.html
+++ b/05.Front End Libraries/01.Bootstrap/18.Line up Form Elements Responsively with Bootstrap.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!-- PASTE FCC CODE BELOW -->
 
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-
 <style>
     h2 {
         font-family: Lobster, Monospace;
@@ -27,17 +27,16 @@
             <a href="#"><img class="img-fluid thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
         </div>
     </div>
-
     <img src="https://bit.ly/fcc-running-cats" class="img-fluid" alt="Three kittens running towards the camera.">
     <div class="row">
         <div class="col-4">
-            <button class="btn btn-block btn-primary">Like</button>
+            <button class="btn btn-block btn-primary"><i class="fa fa-thumbs-up"></i> Like</button>
         </div>
         <div class="col-4">
-            <button class="btn btn-block btn-info">Info</button>
+            <button class="btn btn-block btn-info"><i class="fa fa-info-circle"></i> Info</button>
         </div>
         <div class="col-4">
-            <button class="btn btn-block btn-danger">Delete</button>
+            <button class="btn btn-block btn-danger"><i class="fa fa-trash"></i> Delete</button>
         </div>
     </div>
     <p>Things cats <span class="text-danger">love:</span></p>
@@ -53,12 +52,32 @@
         <li>other cats</li>
     </ol>
     <form action="https://freecatphotoapp.com/submit-cat-photo">
-        <label><input type="radio" name="indoor-outdoor"> Indoor</label>
-        <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
-        <label><input type="checkbox" name="personality"> Loving</label>
-        <label><input type="checkbox" name="personality"> Lazy</label>
-        <label><input type="checkbox" name="personality"> Crazy</label>
-        <input type="text" placeholder="cat photo URL" required>
-        <button type="submit">Submit</button>
+        <div class="row">
+            <div class="col-6">
+                <label><input type="radio" name="indoor-outdoor"> Indoor</label>
+            </div>
+            <div class="col-6">
+                <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <label><input type="checkbox" name="personality"> Loving</label>
+            </div>
+            <div class="col-4">
+                <label><input type="checkbox" name="personality"> Lazy</label>
+            </div>
+            <div class="col-4">
+                <label><input type="checkbox" name="personality"> Crazy</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-7">
+                <input type="text" class="form-control" placeholder="cat photo URL" required>
+            </div>
+            <div class="col-5">
+                <button type="submit" class="btn btn-primary"><i class="fa fa-paper-plane"></i> Submit</button>
+            </div>
+        </div>
     </form>
 </div>
