--- a/05.Front End Libraries/02.jQuery/99.Step-by-step jQuery Project.html
+++ b/05.Front End Libraries/02.jQuery/99.Step-by-step jQuery Project.html
@@ -1,40 +1,75 @@
-<!-- jQuery Section -->
-<script>
-    $(document).ready(function() {
+<!DOCTYPE html>
+<html>
 
-    });
-</script>
-<!-- jQuery Section End -->
-<!-- Bootstrap CDN Links Section -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<!-- Bootstrap CDN Links Section End -->
-<!-- HTML Section -->
-<div class="container-fluid">
-    <h3 class="text-primary text-center">jQuery Playground</h3>
-    <div class="row">
-        <div class="col-6">
-            <h4>#left-card</h4>
-            <div class="card" id="left-card">
-                <div class="card-body bg-light">
-                    <button class="btn btn-outline-secondary bg-light target" id="target1">#target1</button>
-                    <button class="btn btn-outline-secondary bg-light target" id="target2">#target2</button>
-                    <button class="btn btn-outline-secondary bg-light target" id="target3">#target3</button>
+<head>
+    <!-- Bootstrap CDN Links Section -->
+    <div id="bootstrap-links">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" />
+    </div>
+    <!-- Bootstrap CDN Links Section End -->
+    <!-- jQuery Section -->
+    <script>
+        $(document).ready(function() {
+            /*
+            $('button').addClass("animate__animated animate__bounce");
+            $(".card").addClass("animate__animated animate__shakeX");
+            $('#target3').addClass("animate__animated animate__fadeOut")
+            */
+            /*
+            $('button').addClass("animate__animated");
+            $('.btn').addClass("animate__shakeX");
+            $('#target1').removeClass("btn-outline-secondary bg-light");
+            $('#target1').addClass("btn-primary");
+            $("button").removeClass("bg-light");
+            */
+            $("#target1").css("color", "red");
+            $("#target1").prop("disabled", true);
+            $("#target4").html("<em>#target4</em>");
+            $("#target4").remove();
+            $("#target2").appendTo("#right-card-body");
+            $("#target5").clone().appendTo("#left-card-body");
+            $("#left-card-body").parent().css("background-color", "red");
+            $("#right-card-body").children().css("color", "orange");
+            $(".target:nth-child(2)").addClass("animate__animated animate__bounce");
+            $(".target:even").addClass("animate__animated animate__shakeX");
+            $("body").addClass("animate__animated animate__hinge");
+        });
+    </script>
+    <!-- jQuery Section End -->
+</head>
+
+<body>
+    <!-- HTML Section -->
+    <div class="container-fluid">
+        <h3 class="text-primary text-center">jQuery Playground</h3>
+        <div class="row justify-content-center">
+            <div class="col-4">
+                <h4 class="text-center">#left-card</h4>
+                <div class="card" id="left-card">
+                    <div class="card-body  bg-light row-cols-1 text-center" id="left-card-body">
+                        <button class="btn btn-outline-secondary bg-light col-sm-9 col-md-7 target" id="target1">#target1</button>
+                        <button class="btn btn-outline-secondary bg-light col-sm-9 col-md-7 target" id="target2">#target2</button>
+                        <button class="btn btn-outline-secondary bg-light col-sm-9 col-md-7 target" id="target3">#target3</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-6">
-            <h4>#right-card</h4>
-            <div class="card" id="right-card">
-                <div class="card-body bg-light">
-                    <button class="btn btn-outline-secondary bg-light target" id="target4">#target4</button>
-                    <button class="btn btn-outline-secondary bg-light target" id="target5">#target5</button>
-                    <button class="btn btn-outline-secondary bg-light target" id="target6">#target6</button>
+            <div class="col-4">
+                <h4 class="text-center">#right-card</h4>
+                <div class="card" id="right-card">
+                    <div class="card-body bg-light row-cols-1 text-center" id="right-card-body">
+                        <button class="btn btn-outline-secondary bg-light col-sm-9 col-md-7 target" id="target4">#target4</button>
+                        <button class="btn btn-outline-secondary bg-light col-sm-9 col-md-7 target" id="target5">#target5</button>
+                        <button class="btn btn-outline-secondary bg-light col-sm-9 col-md-7 target" id="target6">#target6</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- HTML Section End-->
+    <!-- HTML Section End-->
+</body>
+
+</html>
