--- a/05.Front End Libraries/03.Sass/01.Store Data with Sass Variables.html
+++ b/05.Front End Libraries/03.Sass/01.Store Data with Sass Variables.html
@@ -1,7 +1,9 @@
+<link rel="stylesheet" type="text/css" href="00.Sass Playground.css"></link>
+<!--
 <style type='text/scss'>
     $text-color: red; .header{ text-align: center; } .blog-post, h2 { color: $text-color; }
 </style>
-
+-->
 <h1 class="header">Learn Sass</h1>
 <div class="blog-post">
     <h2>Some random title</h2>
